<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuantifiedSelf</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="quantifiedSelf">Quantified Self</string>
    <string name="dayOfWeek"></string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="sex">Sex</string>
    <string name="feminino">F</string>
    <string name="masculino">M</string>
    <string name="BirthDate">Birth Date</string>
    <string name="height">Height</string>
    <string name="Weight">Weight</string>
    <string name="edit">Edit</string>
    <string name="dateFormat">yyyy/mm/dd</string>
    <string name="saveExt">Save External</string>
    <string name="readExt">Read External</string>
    <string name="persistence">Persistence</string>
    <string name="Historico">Historic</string>
    <string name="metros">metros (m)</string>
    <string name="Perfil">Profile</string>
    <string name="LastRecords">Last Records</string>
    <string name="title_activity_historic">Historic</string>
    <string name="Glucose">Glucose</string>
    <string name="Valor">Value</string>
    <string name="Unit">Unit</string>
    <string name="Data">Time</string>
    <string name="title_activity_new_entry">NewEntryActivity</string>
    <string name="title_activity_glucose">GlucoseActivity</string>
    <string name="title_last_record_activity">Last Record Activity</string>
    <string name="NewEntry">New Entry</string>
    <string name="LastEntry">Last Entry</string>
    <string name="Save">Save</string>
    <string name="title_activity_glucose__new">Glucose_New</string>
    <string name="title_activity_activity__historic">Activity_HistoricActivity</string>
    <string name="title_activity_bmi__historic">BMI_Historic</string>
    <string name="title_activity_blood_pressure__historic">BloodPressure_Historic</string>
    <string name="title_activity_body_fat_historic">BodyFatHistoric</string>
    <string name="title_activity_weight_historic">WeightHistoric</string>
    <string name="title_activity_heart_rate_historic">HeartRateHistoric</string>
    <string name="imgBtn">imgBtn</string>
    <string name="date">yyyy/mm/dd</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="valueSys">Value Systolic</string>
    <string name="valDias">Value Diastolic</string>
    <string name="title_activity_blood_pressure_new">BloodPressureNew</string>
    <string name="EndTime">End Time</string>
    <string name="StartTime">Start Time</string>
    <string name="title_activity_activity_new">ActivityNew</string>
    <string name="type">Type</string>
    <string name="profile">profile</string>
    <string name="calories">Calories</string>
    <string name="dateFormat2">dd/MM/yyyy HH:mm</string>
    <string name="title_last_record_bloodPressure">Last Blood Pressure</string>
    <string name="title_last_records">Last </string>
    <string name="title_activity_last_record_bmi">LastRecordBmi</string>
    <string name="title_activity_last_record_body_fat">LastRecordBodyFat</string>
    <string name="title_activity_last_record_glucose">LastRecordGlucose</string>
    <string name="title_activity_last_record_heart_rate">LastRecordHeartRate</string>
    <string name="title_activity_last_record_weight">LastRecordWeight</string>

</resources>
